--- a/css/styles.scss
+++ b/css/styles.scss
@@ -19,7 +19,7 @@
 body{
     margin:0;
     font-size:18px;
-    // font-family: 'Montserrat', sans-serif;
+    font-family: 'Montserrat', sans-serif;
 }
 ul{
     list-style: none;
@@ -182,32 +182,32 @@ header{
                         width:100%;                       
                     }
                     .project-links{
-                        display:none;
+                        position:absolute;
+                        top:0;
+                        width:100%;
+                        height:99%;
+                        background-color: rgba(0,0,0,0.3);
+                        display:flex;
+                        justify-content: center;
+                        align-items: center;
+                        clip-path: circle(0% at 0% 0%);
+                        transition: clip-path 0.5s ease-in;
+                        a.github{
+                            margin-right:10px;
+                        }
+                        a.external-link {
+                            margin-left:10px;
+                        }
+                        a svg{
+                            width:30px;
+                            color:white;
+                        }
+                        a:hover svg{
+                            color:var(--hover);
+                        }
                     }
-                    &:hover{
-                       .project-links{
-                            display:block;
-                            position:absolute;
-                            top:0;
-                            width:100%;
-                            height:98%;
-                            background-color: rgba(0,0,0,0.3);
-                            display:flex;
-                            justify-content: center;
-                            align-items: center;
-                            a.github{
-                                margin-right:10px;
-                            }
-                            a.external-link {
-                                margin-left:10px;
-                            }
-                            a svg{
-                                width:30px;
-                            }
-                            a:hover {
-                                color:var(--hover);
-                            }
-                       } 
+                    &:hover .project-links{
+                        clip-path: circle(100%);
                     }
                 }
             }
@@ -422,15 +422,12 @@ footer{
                     }
                     .photo{
                         max-width:700px;
-                        &:hover{
-                            .project-links{
-                                height:99%;
-                                a.github svg{
-                                    width:40px;
-                                }
-                                a.external-link svg{
-                                    height:80px;
-                                }
+                        .project-links{
+                            a.github svg{
+                                width:40px;
+                            }
+                            a.external-link svg{
+                                height:80px;
                             }
                         }                        
                     }
