--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Lato:wght@400;700&family=Lemon&family=Montserrat:wght@400;600;700&family=Poppins:wght@400;600;700&display=swap");
 :root {
-  --hover: #20dec8;
-  --dark-bgr:#132329;
+  --hover: #06c5ae;
+  --dark-bgr:#1d353e;
+  --menu-brg:#132329;
   --light-bgr:#dbe5e7;
-  --btn: #06c5ae;
+  --btn: #20dec8;
 }
 
 * {
@@ -69,7 +70,7 @@ header .container .navbar .display-nav {
   right: 0;
   height: 100vh;
   width: 100vw;
-  background-color: var(--dark-bgr);
+  background-color: var(--menu-brg);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -140,7 +141,7 @@ header .container .navbar .display-nav ul li button:hover {
   font-size: 1rem;
   margin-bottom: 1rem;
   background-color: var(--dark-bgr);
-  color: rgb(216, 214, 212);
+  color: rgb(235, 235, 234);
   padding: 0.8rem;
   border-radius: 5px;
   box-shadow: 2px 2px 5px rgba(80, 114, 107, 0.4);
@@ -167,6 +168,8 @@ header .container .navbar .display-nav ul li button:hover {
 .projects .container .projects-container .project-container .photo {
   position: relative;
   margin: 1rem auto 1.5rem auto;
+  aspect-ratio: 4/3;
+  overflow: hidden;
 }
 .projects .container .projects-container .project-container .photo img {
   width: 100%;
@@ -175,8 +178,8 @@ header .container .navbar .display-nav ul li button:hover {
   position: absolute;
   top: 0;
   width: 100%;
-  height: 99%;
-  background-color: rgba(0, 0, 0, 0.3);
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -294,6 +297,7 @@ footer {
   }
   header .container .navbar nav ul li button {
     background-color: var(--btn);
+    color: white;
     outline: none;
     border: none;
     border-radius: 8px;
@@ -313,7 +317,7 @@ footer {
     grid-template-columns: repeat(10, 1fr);
   }
   .projects .container .projects-container .project-container .text {
-    grid-column: 1/6;
+    grid-column: 1/7;
     grid-row: 1/2;
     z-index: 2;
     display: flex;
@@ -323,12 +327,12 @@ footer {
   .projects .container .projects-container .project-container .text .project-title {
     margin-top: 0;
     margin-bottom: 1.5rem;
-    width: 80%;
+    width: 70%;
     text-align: center;
     font-size: 1.5rem;
   }
   .projects .container .projects-container .project-container .text .technologies {
-    width: 80%;
+    width: 65%;
   }
   .projects .container .projects-container .project-container .photo {
     grid-column: 5/11;
@@ -336,15 +340,15 @@ footer {
     margin-right: 0;
   }
   .projects .container .projects-container .alternate .text {
-    grid-column: 6/11;
+    grid-column: 5/11;
   }
   .projects .container .projects-container .alternate .text .project-title {
     width: 100%;
-    padding-left: 20%;
+    padding-left: 35%;
   }
   .projects .container .projects-container .alternate .text .technologies {
     width: 100%;
-    padding-left: 20%;
+    padding-left: 35%;
   }
   .projects .container .projects-container .alternate .photo {
     grid-column: 1/7;
@@ -376,20 +380,34 @@ footer {
   .intro h2 {
     font-size: 2.5rem;
   }
-  .projects .container .projects-container .project-container .text .project-title {
+  .projects .container .projects-container .project-container .text {
+    grid-column: 1/6;
+  }
+  .projects .container .projects-container .project-container .text .project-title, .projects .container .projects-container .project-container .text .technologies {
     font-size: 1.7rem;
+    width: 80%;
   }
   .projects .container .projects-container .project-container .text .description {
     font-size: 1.1rem;
   }
   .projects .container .projects-container .project-container .photo {
     max-width: 700px;
+    aspect-ratio: 3/2;
   }
   .projects .container .projects-container .project-container .photo .project-links a.github svg {
     width: 40px;
   }
   .projects .container .projects-container .project-container .photo .project-links a.external-link svg {
     height: 80px;
+  }
+  .projects .container .projects-container .alternate .text {
+    grid-column: 6/11;
+  }
+  .projects .container .projects-container .alternate .text .project-title, .projects .container .projects-container .alternate .text .technologies {
+    padding-left: 20%;
+  }
+  .projects .container .projects-container .alternate .photo {
+    grid-column: 1/7;
   }
   .about p {
     font-size: 1.15rem;
