--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,15 +1,17 @@
 //download fonts? 
 // de reparat - mobile menu - sa inchia meniul la click pe link
-// hover effect on hover - navbar + project img
+// hover effect navbar 
+
 
 
 
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Lato:wght@400;700&family=Lemon&family=Montserrat:wght@400;600;700&family=Poppins:wght@400;600;700&display=swap');
 :root{
-    --hover: #20dec8;
-    --dark-bgr:#132329; 
+    --hover: #06c5ae;
+    --dark-bgr:#1d353e; 
+    --menu-brg:#132329; 
     --light-bgr:#dbe5e7;
-    --btn: #06c5ae;
+    --btn: #20dec8;
 }
 *{
     padding:0;
@@ -67,7 +69,7 @@ header{
                 right:0;
                 height:100vh;
                 width:100vw;
-                background-color:var(--dark-bgr);
+                background-color:var(--menu-brg);
                 display:flex;
                 flex-direction:column;
                 justify-content: center;
@@ -149,7 +151,7 @@ header{
                         font-size:1rem;
                         margin-bottom:1rem;
                         background-color:var(--dark-bgr);
-                        color:rgb(216, 214, 212);
+                        color:rgb(235, 235, 234);
                         padding:0.8rem;
                         border-radius: 5px;
                        box-shadow:2px 2px 5px rgba(80, 114, 107, 0.4);
@@ -178,6 +180,8 @@ header{
                 .photo{
                     position:relative;
                     margin:1rem auto 1.5rem auto;
+                    aspect-ratio: 4/3;
+                    overflow: hidden;
                     img{
                         width:100%;                       
                     }
@@ -185,8 +189,8 @@ header{
                         position:absolute;
                         top:0;
                         width:100%;
-                        height:99%;
-                        background-color: rgba(0,0,0,0.3);
+                        height:100%;
+                        background-color: rgba(0,0,0,0.4);
                         display:flex;
                         justify-content: center;
                         align-items: center;
@@ -300,7 +304,7 @@ footer{
                                 padding:0.4rem 1rem;
                             }
                             a:hover{
-                                background-color:var(--light-bgr);// lightgray;
+                                background-color:var(--light-bgr);
                                 border-radius:5px;
                             }
                             &:last-child{
@@ -308,7 +312,8 @@ footer{
                                 text-align: right;
                             }
                             button{
-                                background-color:var(--btn);//#e9c46a;
+                                background-color:var(--btn);
+                                color:white;
                                 outline:none;
                                 border:none;
                                 border-radius:8px;
@@ -337,7 +342,7 @@ footer{
                     display:grid;
                     grid-template-columns: repeat(10, 1fr);
                     .text{
-                        grid-column: 1/6;
+                        grid-column: 1/7;
                         grid-row:1/2;
                         z-index:2;
                         display:flex;
@@ -346,13 +351,13 @@ footer{
                         .project-title{
                             margin-top:0; 
                             margin-bottom:1.5rem;
-                            width:80%;
+                            width:70%;
                             text-align:center; 
                             font-size:1.5rem; 
                             
                         }
                         .technologies{
-                            width:80%;
+                            width:65%;
                         }
                     }
                     .photo{
@@ -363,15 +368,15 @@ footer{
                 }
                 .alternate{
                     .text{
+                        grid-column:5/11;
                         .project-title{
                             width: 100%;
-                            padding-left:20%;
+                            padding-left:35%;
                         }
                         .technologies{
                             width:100%;
-                            padding-left:20%;
+                            padding-left:35%;
                         }
-                        grid-column:6/11;
                     }
                     .photo{
                         grid-column:1/7;
@@ -413,15 +418,19 @@ footer{
             .projects-container{
                 .project-container{
                     .text{
-                        .project-title{
+                        grid-column:1/6;
+                        .project-title, .technologies {
                             font-size:1.7rem;
+                            width:80%;
                         }
                         .description{
                             font-size: 1.1rem;
                         }
+                    
                     }
                     .photo{
                         max-width:700px;
+                        aspect-ratio: 3/2;;
                         .project-links{
                             a.github svg{
                                 width:40px;
@@ -430,6 +439,17 @@ footer{
                                 height:80px;
                             }
                         }                        
+                    }
+                }
+                .alternate{
+                    .text{
+                        grid-column:6/11;
+                        .project-title, .technologies{
+                            padding-left:20%;
+                        }
+                    }
+                    .photo{
+                        grid-column:1/7;
                     }
                 }
             }
