--- a/css/styles.scss
+++ b/css/styles.scss
@@ -130,6 +130,9 @@ header{
         font-size:3rem;
         margin-bottom:1rem;
     }
+    h2{
+        color:var(--hover);
+    }
 }
 
 .projects{
@@ -335,6 +338,7 @@ footer{
         padding-left:15%;
     }
     .projects{
+        margin-bottom: 5rem; 
         .container{
             .projects-container{
                 .project-container{
