--- a/css/styles.scss
+++ b/css/styles.scss
@@ -3,15 +3,13 @@
 // hover effect navbar 
 
 
-
-
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Lato:wght@400;700&family=Lemon&family=Montserrat:wght@400;600;700&family=Poppins:wght@400;600;700&display=swap');
 :root{
     --hover: #06c5ae;
     --dark-bgr:#1d353e; 
     --menu-brg:#132329; 
     --light-bgr:#dbe5e7;
-    --btn: #20dec8;
+    --btn: #20dfc9;
 }
 *{
     padding:0;
