--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,5 +1,4 @@
 //download fonts? 
-// de reparat - mobile menu - sa inchia meniul la click pe link
 // hover effect navbar 
 
 
@@ -134,6 +133,19 @@ header{
     }
 }
 
+.about{
+    font-family: 'Inter', sans-serif;
+    padding:5rem 1rem 0 1rem;
+    h2{
+        margin-bottom:1rem;
+    }
+    p{
+        margin-top:0.4rem;
+        padding:0.5rem;
+        font-size:1.1rem;
+    }
+}
+
 .projects{
     font-family: 'Lato', sans-serif;
     padding:5rem 1rem 2rem 1rem;
@@ -166,7 +178,7 @@ header{
                         justify-content:center;
                         
                         span{
-                            background-color:var(--light-bgr);// #c0ccce; 
+                            background-color:var(--light-bgr);
                             border-radius:5px;
                             padding:0.5rem;
                             font-size: 14px;
@@ -184,8 +196,10 @@ header{
                     margin:1rem auto 1.5rem auto;
                     aspect-ratio: 4/3;
                     overflow: hidden;
+                    max-width:400px;
+                    border-radius: 5px;
                     img{
-                        width:100%;                       
+                        width:100%;                      
                     }
                     .project-links{
                         position:absolute;
@@ -221,18 +235,7 @@ header{
     }
     
 } 
-.about{
-    font-family: 'Inter', sans-serif;
-    padding:5rem 1rem 0 1rem;
-    h2{
-        margin-bottom:1rem;
-    }
-    p{
-        margin-top:0.4rem;
-        padding:0.5rem;
-        font-size:1.1rem;
-    }
-}
+
 .contact{
     background-color:var(--light-bgr);
     text-align:center;
@@ -258,7 +261,7 @@ header{
             li{
                 
                 a:hover{
-                    color:var(--hover);//#cf4422;
+                    color:var(--hover);
                 }
                 svg{
                     width:30px;
@@ -339,7 +342,7 @@ footer{
         .container{
             .projects-container{
                 .project-container{
-                   
+                    margin-bottom: 2rem;
                     display:grid;
                     grid-template-columns: repeat(10, 1fr);
                     .text{
@@ -358,25 +361,26 @@ footer{
                             
                         }
                         .technologies{
-                            width:65%;
+                            width:80%;
                         }
                     }
                     .photo{
-                        grid-column:5/11;
+                        grid-column:6/11;
                         grid-row:1/2;
                         margin-right:0;
+                        max-width:unset;  
                     }
                 }
                 .alternate{
                     .text{
-                        grid-column:5/11;
+                        grid-column:6/11;
                         .project-title{
                             width: 100%;
                             padding-left:35%;
                         }
                         .technologies{
                             width:100%;
-                            padding-left:35%;
+                            padding-left:20%;
                         }
                     }
                     .photo{
@@ -419,18 +423,24 @@ footer{
             .projects-container{
                 .project-container{
                     .text{
-                        grid-column:1/6;
-                        .project-title, .technologies {
+                        .project-title{
                             font-size:1.7rem;
-                            width:80%;
                         }
                         .description{
                             font-size: 1.1rem;
                         }
+                        .technologies span{
+                            margin-top:0.8rem;
+                            margin-left:3px;
+                            margin-right:3px;
+                            font-size:0.9rem;
+                            img{
+                                width:18px;
+                            }
+                        }
                     
                     }
                     .photo{
-                        max-width:700px;
                         aspect-ratio: 3/2;;
                         .project-links{
                             a.github svg{
@@ -440,17 +450,6 @@ footer{
                                 height:80px;
                             }
                         }                        
-                    }
-                }
-                .alternate{
-                    .text{
-                        grid-column:6/11;
-                        .project-title, .technologies{
-                            padding-left:20%;
-                        }
-                    }
-                    .photo{
-                        grid-column:1/7;
                     }
                 }
             }
@@ -470,7 +469,7 @@ footer{
 
 @media (min-width:2500px){
     .container{
-        max-width:2000px;
+        max-width:1800px;
         h2{
             font-size:2.3rem;
         }
@@ -503,14 +502,9 @@ footer{
                 text-align: center;
                 margin-bottom:3rem;
             }
-            max-width:2300px;
+            max-width:1600px;
             .projects-container{
-                display:flex;
-                gap:2%;
-                flex-direction:row;
-                flex-wrap: wrap;
                 .project-container{
-                    flex-basis:49%;
                     .text{
                         .project-title{
                             font-size:2rem;
@@ -520,6 +514,9 @@ footer{
                         }
                         .technologies span{ 
                             font-size:1rem;
+                            margin-top:1rem;
+                            margin-left:7px;
+                            margin-right:7px;
                         }
                     }
                 }
@@ -528,10 +525,11 @@ footer{
     } 
     .about{
         .container{
-            max-width:1400px;
+            max-width:1600px;
+            margin-bottom:2rem;
             h2{
                 text-align: center;
-                margin-top:2rem;
+                margin-bottom:3rem;
             }
         }
         p{ 
