--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,8 +1,8 @@
 //download fonts? 
 // hover effect navbar 
 
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Lato:wght@400;700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Lato:wght@400;700&family=Lemon&family=Montserrat:wght@400;600;700&family=Poppins:wght@400;600;700&display=swap');
 :root{
     --hover: #06c5ae;
     --dark-bgr:#1d353e; 
